--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -16,7 +16,7 @@
       <a href='https://github.com/carlosdelfresno' target='_blank'>
         <img
           class='transition ease-in hover:scale-125 delay-150 duration-200'
-          src='github2.svg'
+          src='github.svg'
         />
       </a>
     </li>
