--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props
 </html>
 <style is:global>
   .body-main {
-    background-image: url('/bg3.svg');
+    background-image: url('/bg.svg');
 	background-color: #080d19;
   }
   :root {
