--- a/src/components/Proyecto.astro
+++ b/src/components/Proyecto.astro
@@ -1,4 +1,25 @@
 ---
-const props = Astro.props;
+const props = Astro.props
 ---
-<h4 class="text-sm">{ props.nombre }</h4>
+
+<div
+  class='flex flex-col border-slate-500 border-[1px] rounded-sm text-center gap-3 pb-2 transform hover:border-slate-100 duration-200'
+>
+  <div class='overflow-hidden w-full h-50 m-auto'>
+    <img
+      src={props.imagen}
+      class='mx-auto transform hover:scale-125 duration-500 max-h-96'
+    />
+  </div>
+  <h4 class='text-md font-semibold'>{props.nombre}</h4>
+  <h4 class='text-sm'>{props.descripcion}</h4>
+  <div class='flex flex-row gap-2 justify-center'>
+    {
+      props.tecnologias.map((tech: string) => (
+        <span class='text-xs bg-slate-500 text-white px-2 py-1 rounded-sm cursor-default'>
+          {tech}
+        </span>
+      ))
+    }
+  </div>
+</div>
