--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -1,8 +1,32 @@
-<main class='flex flex-col gap-3 p-6 text-white'>
+<main class='p-6 text-white'>
   <h2 class='text-4xl font-semibold text-center text-green-500'>&lt; Tecnologías /&gt;</h2>
-  <div class='flex gap-3 justify-center'>
-    <div>React</div>
-    <div>Angular</div>
-    <div>HTML</div><div>JavaScript</div><div>SQL</div>
+  <div class='flex gap-5 justify-center mt-6'>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="react.svg" width="35px" title="React" alt="Logo de React">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="angular.svg" width="35px" title="Angular" alt="Logo de Angular">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="astro.svg" width="35px" title="Astro" alt="Logo de Astro">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="javascript.svg" width="35px" title="JavaScript" alt="Logo de JavaScript">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="html.svg" width="35px" title="HTML" alt="Logo de HTML">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="css.svg" width="35px" title="CSS" alt="Logo de CSS">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
+      <img src="tailwindcss.svg" width="35px" title="TailwindCSS" alt="Logo de TailwindCSS">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-200">
+      <img src="mysql.svg" width="35px" title="MySQL" alt="Logo de MySQL">
+    </div>
+    <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-200">
+      <img src="sql.svg" width="35px" title="SQL" alt="Logo de SQL">
+    </div>
   </div>
 </main>
