--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -1,4 +1,4 @@
-<main class='flex flex-col gap-3 p-6 text-white'>
+<main class='p-6 text-white'>
   <h2 class='text-4xl font-semibold text-center text-green-500'>
     &lt; Experiencia /&gt;
   </h2>
