Responsive de las tecnologías

--- a/src/components/Tecnologias.astro
+++ b/src/components/Tecnologias.astro
@@ -1,6 +1,6 @@
 <main class='p-6 text-white'>
   <h2 class='text-4xl font-semibold text-center text-green-500'>&lt; Tecnologías /&gt;</h2>
-  <div class='flex gap-5 justify-center mt-6'>
+  <div class='flex gap-5 justify-center mt-6 flex-wrap'>
     <div class="rounded border-[1px] p-2 align-middle hover:scale-150 duration-300">
       <img src="react.svg" width="35px" title="React" alt="Logo de React">
     </div>
