--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -19,39 +19,13 @@
       >
         Fullstack developer
       </h3>
-      <!-- <ul class='flex justify-center gap-4 self-start'>
-        <li>
-          <a href='https://www.linkedin.com/in/carlosdelfresno' target='_blank'>
-            <img
-              class='transition ease-in hover:scale-125 delay-150 duration-200'
-              src='linkedin.svg'
-            />
-          </a>
-        </li>
-        <li>
-          <a href='https://github.com/carlosdelfresno' target='_blank'>
-            <img
-              class='transition ease-in hover:scale-125 delay-150 duration-200'
-              src='github.svg'
-            />
-          </a>
-        </li>
-        <li>
-          <a href='mailto:carlos@delfresno.com'>
-            <img
-              class='transition ease-in hover:scale-125 delay-150 duration-200'
-              src='email.svg'
-            />
-          </a>
-        </li>
-      </ul> -->
     </div>
     <img
       src='me.jpg'
       class='rounded-full h-56 w-56 border-green-400 border-solid border-2 transform hover:scale-90 delay-150 duration-200'
     />
   </div>
-  <div class='text-green-700 text-center text-3xl hover:scale-110 hover:-translate-y-2 duration-200'>
+  <div class='text-green-700 text-center text-3xl'>
     + 10 años de experiencia
   </div>
   <div class='h-2 rounded-lg bg-gradient-to-l from-green-600 to-green-950'>
