--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -3,7 +3,7 @@
     class='flex md:flex-row flex-col items-center gap-4 justify-between text-white'
   >
     <div class='flex flex-col gap-6 place-content-end'>
-      <h1 class='mb-1 font-mono grow text-xl md:text-2xl'>
+      <!-- <h1 class='mb-1 font-mono grow text-xl md:text-2xl'>
         ¡Hola!
         <span
           class='inline-flex h-10 pt-2 overflow-x-hidden animate-type group-hover:animate-type-reverse whitespace-nowrap text-brand-accent will-change-transform'
@@ -13,7 +13,16 @@
         <span
           class='box-border cursor inline-block w-1 h-3 ml-2 -mb-2 bg-white md:-mb-4 md:h-12 animate-cursor will-change-transform'
         ></span>
-      </h1>
+      </h1> -->
+      <div class="flex flex-col sm:flex-row font-mono text-xl md:text-2xl gap-1">
+        <h1 class='align-middle self-center'>¡Hola!</h1>
+        <div class="self-center sm:self-start align-middle text-center">
+          <h1 class="inline-flex h-10 overflow-x-hidden animate-type group-hover:animate-type-reverse whitespace-nowrap text-brand-accent will-change-transform">Soy Carlos del Fresno 👋</h1>
+          <span
+          class='box-border cursor inline-block w-1 h-8 ml-2 -mb-2 bg-white md:-mb-4 md:h-12 animate-cursor will-change-transform'
+        ></span>
+        </div>
+      </div>
       <h3
         class='text-3xl font-bold text-green-700 delay-1000 transform transition-all duration-200 ease-in-out'
       >
