--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -18,6 +18,7 @@ import proyectos from '../data/proyectos.json'
             descripcion={proyecto.descripcion}
             imagen={proyecto.imagen}
             tecnologias={proyecto.tecnologias}
+            url={proyecto.url}
           />
         )
       })
