Añadido nuevo proyecto de Dulcesol en portfolio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,8 +55,8 @@ import Tecnologias from '../components/Tecnologias.astro'
       <Contacto />
     </div>
   </main>
-  <footer class='text-white py-4 text-center'>
-    Hecho con ❤️ por Carlos del Fresno Canales
+  <footer class='text-white py-10 text-center mb-4'>
+    Hecho con ❤️ por <span class="font-bold">Carlos del Fresno Canales</span>
   </footer>
 </Layout>
 
